--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "server": "json-server -d 750 --watch --port 3333 ./server.js"
   },
   "dependencies": {
     "next": "12.0.2",
@@ -17,6 +18,7 @@
     "@types/react": "^17.0.33",
     "eslint": "7",
     "eslint-config-next": "12.0.2",
+    "json-server": "^0.17.0",
     "typescript": "^4.4.4"
   }
 }
