--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "server": "json-server -d 750 --watch --port 3333 ./server.js"
   },
   "dependencies": {
+    "@next/bundle-analyzer": "^12.0.2",
     "next": "12.0.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-virtualized": "^9.22.3"
   },
   "devDependencies": {
     "@types/node": "^16.11.6",
     "@types/react": "^17.0.33",
+    "@types/react-virtualized": "^9.21.14",
     "eslint": "7",
     "eslint-config-next": "12.0.2",
     "json-server": "^0.17.0",
